examples/smlfmt-1.2.0/test/fail/bad-patrow-2.sml
val {x: int = 5, ...} = {x=5, y=6}
